@@ -1,36 +1,0 @@
-/* BST - Bedevilled Audio System IDL	-*-mode: c++;-*-
- * Copyright (C) 2002 Tim Janik
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
- */
-
-namespace Bst {
-/* BEAST Global Config */
-record GConfig {
-  String rc_version			= (NULL, "Release counter", NULL, SFI_PARAM_STORAGE);
-  group "Synthesis Networks" {
-    Bool   snet_anti_aliased		= ("Anti-Alias", "Draw synthesis networks anti-aliased?",
-					    TRUE, SFI_PARAM_DEFAULT);
-    Bool   snet_edit_fallback		= ("Single Edit", "Fallback into Edit mode after creating synthesis modules?",
-					    TRUE, SFI_PARAM_DEFAULT);
-    Bool   snet_swap_io_channels	= ("Swap IO", "Swap input with output channels when displaying synthesis modules?",
-                                            FALSE, SFI_PARAM_DEFAULT);
-  };
-  group "Misc" {
-    Int    tab_width			= ("Tab Width", "Specify project tab width in pixels",
-                                           0, 0, 5000, 5, SFI_PARAM_DEFAULT);
-  };
-};
-};
