@@ -1,3 +1,9 @@
+Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>
+
+        * beast-gtk/bstrecords.idl:
+        * bsw/Makefile.am:
+        * beast-gtk/Makefile.am: renamed *.sfidl to *.idl.
+
 Fri Aug 22 04:22:56 2003  Tim Janik  <timj@gtk.org>
 
 	* acbeast.m4: enable -O2 optimizations for c++ code.
